# My-C-assignment-codes

./: CMakeLists.txt  Ex_1_Q_2.cpp  Ex_1_Q_3.cpp  Ex_1_Q_add_Recursion.cpp  Exam_prep.cpp  README.md  SomeText.txt
Exercise_2/: CMakeLists.txt  Ex_2_Q_2.cpp  Ex_2_Q_3.cpp  Ex_2_Q_4.cpp  Ex_2_Q_add.cpp  Readme.md
Exercise_3/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  Ex_3_Q_1.cpp
Exercise_4/: CMakeLists.txt  ClassA.cpp  ClassA.h  ClassB.cpp  ClassB.h  Enigma.cpp  Enigma.h  Ex_4_Q_1.cpp  Ex_4_Q_2.cpp  Ex_4_Q_3.cpp  Ex_4_Q_4.cpp  Vector.cpp  Vector.h
Exercise_5/: CMakeLists.txt  Data.cpp  Data.h  Dataset.cpp  Dataset.h  Ex_5_Q_1.cpp  Ex_5_Q_2.cpp
Exercise_6/: CMakeLists.txt  DataSet.cpp  DataSet.h  Ex_6_Q_1.cpp  Ex_6_Q_2.cpp  Line.cpp  Line.h  Vec3.cpp  Vec3.h
