cmake_minimum_required(VERSION 2.8.9)
project(Assignment_1)
add_executable(Ass1 Ex_1_Q_2.cpp)
add_executable(Ass2 Ex_1_Q_3.cpp)
add_executable(Ass_add Ex_1_Q_add_Recursion.cpp)
add_executable(Ass_exam_prep Exam_prep.cpp)
add_subdirectory(Exercise_2)
add_subdirectory(Exercise_3)
add_subdirectory(Exercise_5)
add_subdirectory(Exercise_6)
add_subdirectory(Exercise_4)