cmake_minimum_required(VERSION 2.8.9)
project(Assignment_4)
add_executable(Ass4_Ex1 Ex_4_Q_1.cpp ClassA.cpp ClassA.h ClassB.cpp ClassB.h Ex_4_Q_4.cpp)
add_executable(Ass4_ex3 Ex_4_Q_3.cpp Vector.cpp Vector.h)
add_executable(Ass_4_ex4 Ex_4_Q_4.cpp)
add_executable(Ass_4_ex2 Ex_4_Q_2.cpp Enigma.cpp Enigma.h)